Change convert to list